--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,7 +5,6 @@
 
 .header {
   margin-bottom: size(130, 25);
-
   position: fixed;
   top: 0;
   left: 0;
@@ -268,6 +267,11 @@
   }
 
   &__item {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 310px;
+    height: 100%;
     transition: opacity .3s ease-in-out, outline-color .3s ease-in-out;
     outline: 1px solid transparent;
   }
